# rag-system-drive

./: .gitignore  README.md  app.py  main.py  pyproject.toml
api/: main.py
connectors/: gdrive.py
embedding/: embedder.py
processing/: chunker.py  parser.py
search/: faiss_store.py
src/: chat_history.py  rag_chain.py
